--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <![endif]-->
 
 
-<script src="vendor/angular/angular.js"></script>
+<script src="vendor/angular.min.js"></script>
 <!--<script src="../src/youtube-library/youtube-library-module.js"></script>-->
 <!--<script src="../src/youtube-library/youtubeService.js"></script>-->
 <!--<script src="../src/youtube-library/playlist-controller.js"></script>-->
