--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-12 col-sm-12">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-11" style="float:right">
-                    <div class="card" style="float:right">
+                    <div class="card" style="float:right;width:100%;">
                         <h4 class="card-header text-center display-4"> How To Invest Into Cryptocurrency
                             <!-- <br/><span class="card-title">{{vc.current.title}} ({{vc.current.duration | period}})</span> -->
                         </h4>
@@ -77,7 +77,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10">
                     <div class="playlist">    
                         <h4 class="display-4 playlist-title">Course Playlist</h4>
-                        <div class="list-group">
+                        <div class="list-group" ng-init="activeVideo=0;">
                             <span ng-click="vc.playVideo(0);activeVideo=0;" ng-class="{'active':activeVideo == 0}" class="playlist-link list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">What is Cryptocurrency?</h5>
