--- a/index.html
+++ b/index.html
@@ -120,6 +120,21 @@
                             </span>
                         </div>
                     </div>
+                
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10">
+                    <h4 class="display-4 playlist-title">Investment Tools:</h4>
+                    <div class="card" style="margin-top:20px;">
+                        <a href="http://bitconnect.bitcoinfutureinvestments.com" target="_blank">
+                        <img class="card-img-top" src="vendor/images/bc.png" alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <h4 class="card-title">Bitconnect Strategy Calendar</h4>
+                            <p class="card-text">Use this strategy tool to plan your investment with Bitconnect!</p>
+                            <a href="#" class="btn btn-success btn-lg">Take me there !</a>
+                        </div>
+                    </div>
+                
                 </div>
             </div>
         </div>
