--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10">
                     <div class="playlist">    
-                        <h4 class="display-4 playlist-title">Course Playlist</h4>
+                        <h4 class="display-4 playlist-title">Playlist :</h4>
                         <div class="list-group" ng-init="activeVideo=0;">
                             <span ng-click="playlistClick(0)" ng-class="{'active':activeVideo == 0}" class="playlist-link list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">What is Cryptocurrency?</h5>
-                                    <!-- <small>3 days ago</small> -->
+                                    <small>2:01m</small>
                                 </div>
                                 <p class="mb-1">A quick explanation about Cryptocurrency and bitcoin.</p>
                                 <small>#1</small>
@@ -100,7 +100,7 @@
                             <span ng-click="playlistClick(1)" ng-class="{'active':activeVideo == 1}" class="playlist-link list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Investment options</h5>
-                                    <!-- <small class="text-muted">3 days ago</small> -->
+                                    <small class="text-muted">1:55m</small>
                                 </div>
                                 <p class="mb-1">How to profit from Bitcoin? Where to get it?</p>
                                 <small class="text-muted">#2</small>
@@ -108,7 +108,7 @@
                             <span ng-click="playlistClick(2)" ng-class="{'active':activeVideo == 2}" class="playlist-link list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">What is Bitconnect ?</h5>
-                                    <!-- <small class="text-muted">3 days ago</small> -->
+                                    <small class="text-muted">1:00m</small>
                                 </div>
                                 <p class="mb-1">Bitconnect Platform - Quick walkthru</p>
                                 <small class="text-muted">#3</small>
@@ -116,7 +116,7 @@
                             <span ng-click="playlistClick(3);" ng-class="{'active':activeVideo == 3}" class="playlist-link list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">How to Invest with Bitconnect ?</h5>
-                                    <!-- <small class="text-muted">3 days ago</small> -->
+                                    <small class="text-muted">4:00m</small>
                                 </div>
                                 <p class="mb-1">Pick your Bitconnect strategy investment</p>
                                 <small class="text-muted">#4</small>
@@ -134,7 +134,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Bitconnect Strategy Calendar</h4>
                             <p class="card-text">Use this strategy tool to plan your investment with Bitconnect!</p>
-                            <a href="#" class="btn btn-success btn-lg">Take me there !</a>
+                            <a href="http://bitconnect.bitcoinfutureinvestments.com" target="_blank" class="btn btn-success btn-lg">Take me there !</a>
                         </div>
                     </div>
                 
