--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="vendor/styles/open-iconic-bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/styles/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/styles/app.css">
-
+    <title>How to invest in Cryptocurrency</title>
 </head>
 <body ng-controller='main'>
     <div class="wallpaper"></div>
